--- a/kellerkompanie-sync/Properties/Resources.de-DE.resx
+++ b/kellerkompanie-sync/Properties/Resources.de-DE.resx
@@ -130,7 +130,7 @@
     <value>Eine Liste von Ordnern auf deinem Computer, in dem das Tool nach Addons sucht (Ordner die mit @ starten). Du kannst auch Ordner auswählen die bereits Addons enthalten, dann wird das Tool versuchen existierende Addons zu entdecken bevor es welche runterlädt.</value>
   </data>
   <data name="AllModsDownloadedButNotSubscribed" xml:space="preserve">
-    <value>Alle Addons runtergeladen, aber nicht abonniert</value>
+    <value>Alle Addons vorhanden, aber die Gruppe ist nicht abonniert</value>
   </data>
   <data name="AllModsMissing" xml:space="preserve">
     <value>Alle Addons fehlen</value>
@@ -257,6 +257,9 @@
   </data>
   <data name="Update" xml:space="preserve">
     <value>Update</value>
+  </data>
+  <data name="Website" xml:space="preserve">
+    <value>Webseite öffnen</value>
   </data>
   <data name="Wiki" xml:space="preserve">
     <value>Wiki</value>
